# coinmarketcap-mcp

./: CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yaml  publish.yaml
src/coinmarketcap_mcp/: __init__.py  cmc_api.py  server.py
tests/: test_integration.py  test_unit.py
