[project]
name = "coinmarketcap-mcp"
version = "0.1.1"
description = "MCP server for CoinMarketCap API - search tokens, get metadata, and market data"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Yiming Yan" }
]
keywords = ["mcp", "coinmarketcap", "cryptocurrency", "crypto", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.28.0",
]

[project.urls]
Homepage = "https://github.com/YimingYAN/coinmarketcap-mcp"
Repository = "https://github.com/YimingYAN/coinmarketcap-mcp"
Issues = "https://github.com/YimingYAN/coinmarketcap-mcp/issues"

[project.scripts]
coinmarketcap-mcp = "coinmarketcap_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/coinmarketcap_mcp"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.22.0",
]
